nitial module init and bootstrapping

--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
 	},
 	"require": {
 		"php": ">=5.7.0",
-    		"stereochrome/yii2-discourse-usuario": "*"
+    	"stereochrome/yii2-discourse-usuario": "*"
 	},
 	"autoload": {
-		"psr-4": {"Stereochrome\\Discourse\\": "./src/Discourse"}
+		"psr-4": {
+			"Stereochrome\\Discourse\\": "./src/Discourse"
+		}
 	},
-    	"extra": {
-        	"bootstrap": "Stereochrome\\Discourse\\Bootstrap"
-    	}
+    "extra": {
+       	"bootstrap": "Stereochrome\\Discourse\\Bootstrap"
+   	}
 }
